# VibeCraft

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
assets/saves/: audio_prefs.txt  join_presets.txt
assets/shaders/: fs_chunk.sc  fs_logo.sc  fs_ui.sc  fs_ui_solid.sc  varying.def.sc  vs_chunk.sc
assets/textures/: chunk_atlas.bgra
cmake/: Dependencies.cmake
include/vibecraft/: ChunkAtlasLayout.hpp
include/vibecraft/app/: Application.hpp  ApplicationAmbientLife.hpp  ApplicationBotanyRuntime.hpp  ApplicationChunkStreaming.hpp  ApplicationCombat.hpp  ApplicationConfig.hpp  ApplicationEquipment.hpp  ApplicationMovementHelpers.hpp  ApplicationMultiplayerLog.hpp  ApplicationOxygenRuntime.hpp  ApplicationSpawnHelpers.hpp  ApplicationSurvival.hpp  ApplicationTerraformingRuntime.hpp  ChatCommands.hpp  Crafting.hpp  Furnace.hpp  Inventory.hpp  Mining.hpp  OxygenItems.hpp  PauseMenuInputPolicy.hpp  SingleplayerSave.hpp  StartupFlow.hpp  TorchPlacement.hpp  WaterMovement.hpp
include/vibecraft/audio/: MusicCatalog.hpp  MusicDirector.hpp  RuntimeAudioRoot.hpp  SharedAudioOutput.hpp  SoundEffects.hpp
include/vibecraft/core/: Logger.hpp
include/vibecraft/game/: Camera.hpp  CollisionHelpers.hpp  DayNightCycle.hpp  EnemyTypes.hpp  MobNavigation.hpp  MobSpawnSystem.hpp  MobTypes.hpp  OxygenSystem.hpp  PlayerVitals.hpp  WeatherSystem.hpp
include/vibecraft/meshing/: ChunkMesher.hpp
include/vibecraft/multiplayer/: Protocol.hpp  Session.hpp  Transport.hpp  UdpTransport.hpp  WorldSync.hpp
include/vibecraft/platform/: InputState.hpp  LocalNetworkAddress.hpp  Window.hpp
include/vibecraft/render/: Renderer.hpp  RendererDetail.hpp  RendererInternal.hpp
include/vibecraft/world/: Block.hpp  BlockMetadata.hpp  Chunk.hpp  TerrainGenerator.hpp  TerrainNoise.hpp  WoodlandRavine.hpp  World.hpp  WorldEditCommand.hpp  WorldSerializer.hpp  WorldVerticalScale.hpp
scripts/: VibeCraft.command  VibeCraftPreview.command  build_chunk_atlas.sh  gen_meadow_tuft_textures.py  gen_portal_style_textures.py  gen_rounded_tree_textures.py  gen_short_grass_dense.py  gen_storybook_block_textures.py  gen_terrain_locking_textures.py  import_hyassets_block_textures.py  render_hyassets_item_icons.py
src/app/: Application.cpp  ApplicationAmbientLife.cpp  ApplicationBotanyRuntime.cpp  ApplicationChat.cpp  ApplicationChunkStreaming.cpp  ApplicationCombat.cpp  ApplicationCraftingMenu.cpp  ApplicationDroppedItems.cpp  ApplicationEquipment.cpp  ApplicationMobAudio.cpp  ApplicationMovementHelpers.cpp  ApplicationMultiplayerClient.cpp  ApplicationMultiplayerHost.cpp  ApplicationMultiplayerRuntime.cpp  ApplicationMultiplayerSession.cpp  ApplicationOxygenRuntime.cpp  ApplicationPersistence.cpp  ApplicationPlayerLifecycle.cpp  ApplicationSingleplayerLoad.cpp  ApplicationSpawnHelpers.cpp  ApplicationSurvival.cpp  ApplicationTerraformingRuntime.cpp  ApplicationTnt.cpp  ApplicationWorldSync.cpp  ChatCommands.cpp  Crafting.cpp  Furnace.cpp  Inventory.cpp  Mining.cpp  OxygenItems.cpp  PauseMenuInputPolicy.cpp  SingleplayerSave.cpp  StartupFlow.cpp  TorchPlacement.cpp  WaterMovement.cpp  main.cpp
src/app/crafting/: Crafting.cpp  CraftingRecipeInternal.hpp  CraftingRecipesCatalog.cpp  CraftingRecipesVanilla.cpp
src/app/input/: ApplicationInputMainMenu.cpp  ApplicationInputMenuHelpers.cpp  ApplicationInputPaused.cpp  ApplicationInputPlayingActions.cpp  ApplicationInputPlayingMovement.cpp  ApplicationInputRouter.cpp
src/app/runtime/: ApplicationFrameDebug.cpp
src/audio/: MusicCatalog.cpp  MusicDirector.cpp  RuntimeAudioRoot.cpp  SharedAudioOutput.cpp  SoundEffects.cpp
src/core/: Logger.cpp
src/game/: Camera.cpp  CollisionHelpers.cpp  MobNavigation.cpp  MobSpawnSystem.cpp  OxygenSystem.cpp  PlayerVitals.cpp
src/game/mobs/: HostileMobBehavior.cpp  MobBreeding.cpp  MobCombat.cpp  MobProjectiles.cpp  MobSpawning.cpp  MobTargeting.cpp
src/meshing/: ChunkMesher.cpp  ChunkMesherFluidGeometry.cpp  ChunkMesherFluidGeometry.hpp  ChunkMesherTorchGeometry.cpp  ChunkMesherTorchGeometry.hpp  ChunkMesherTorchLighting.cpp  ChunkMesherTorchLighting.hpp
src/multiplayer/: Protocol.cpp  Session.cpp  UdpTransport.cpp  WorldSync.cpp
src/platform/: LocalNetworkAddress.cpp  Window.cpp
src/render/: Renderer.cpp  RendererChatDbgText.cpp  RendererCraftingUi.cpp  RendererCulling.cpp  RendererDbgText.cpp  RendererDebugOverlay.cpp  RendererFrame.cpp  RendererHitTests.cpp  RendererHudGpu.cpp  RendererMenuChrome.cpp  RendererMobSprites.cpp  RendererScreenOverlays.cpp  RendererShaderTexture.cpp  RendererSkyEffects.cpp  RendererUiGpu.cpp  RendererWeather.cpp  RendererWorldSprites.cpp
src/world/: Chunk.cpp  TerrainGenerator.cpp  WoodlandRavine.cpp  World.cpp  WorldGeneration.cpp  WorldGeneration.hpp  WorldGenerationCaveDecor.cpp  WorldGenerationDetail.hpp  WorldGenerationFlora.cpp  WorldGenerationLandmarks.cpp  WorldGenerationLandmarks.hpp  WorldGenerationTrees.cpp  WorldGravity.cpp  WorldSerializer.cpp
src/world/biomes/: BiomeBlending.cpp  BiomeProfile.cpp  BiomeSelection.cpp  BiomeTerrainContribution.cpp  BiomeVariation.cpp  FloraGenerationTuning.cpp  FloraVariantRules.cpp  SurfaceVariantRules.cpp  TreeGenerationTuning.cpp  TreeVariantRules.cpp
src/world/underground/: CaveBiomeRules.cpp  (+2 more)
tests/: armor_equipment_tests.cpp  botany_runtime_tests.cpp  chat_command_tests.cpp  furnace_tests.cpp  inventory_mining_tests.cpp  multiplayer_dropped_item_tests.cpp  oxygen_canister_tests.cpp  oxygen_generator_tests.cpp  oxygen_system_tests.cpp  pause_menu_input_policy_tests.cpp  startup_flow_tests.cpp  terraforming_runtime_tests.cpp  terrain_biome_pass_tests.cpp  world_content_pivot_tests.cpp  world_smoke_tests.cpp
tests/crafting/: crafting_tests.cpp
tests/game/: mob_breeding_tests.cpp  mob_combat_tests.cpp  player_vitals_smoke_tests.cpp
tests/multiplayer/: multiplayer_smoke_tests.cpp  world_sync_tests.cpp
tests/world/: world_ambient_smoke_tests.cpp  world_biome_variation_tests.cpp  world_chunk_spawn_smoke_tests.cpp  world_persistence_smoke_tests.cpp  world_queries_smoke_tests.cpp  world_terrain_smoke_tests.cpp
(+30 files in other folders)
